# book-indexer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  book.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
config/: legal_lemma_overrides.yaml
fixtures/: acronym_overrides.yaml  acronym_seed.yaml  chapter_rule_systems.yaml  citation_jurisdictions.yaml  doctrinal_patterns.yaml  golden_10_pages.yaml  legal_phrase_vocab.yaml  render_stopwords.yaml
samples/: PROVENANCE.md  build_synthetic_treatise.py
src/book_indexer/: __init__.py  config.py
src/book_indexer/assembly/: __init__.py  __main__.py  canonical.py  cite_rule.py  coverage.py  cross_refs.py  dedup.py  errors.py  ir.py  prose_normalize.py  subdivide.py  tree.py  verifier_sweep.py
src/book_indexer/audit/: __init__.py  coverage_audit.py  heading_probe.py
src/book_indexer/cli/: __main__.py  app.py  differ.py  errors.py  ingest_main.py  version.py
src/book_indexer/concepts/: __init__.py  __main__.py  cache.py  chunker.py  errors.py  passes.py  schema.py  subagent.py  symbolic.py  union.py
src/book_indexer/curator/: __init__.py  apply_recapitalize.py  apply_removal.py  errors.py  fixture.py  personas.py  plural_filter.py
src/book_indexer/ingest/: __main__.py  audit.py  classifier.py  corpus_writer.py  errors.py  extractor.py  folio_resolver.py  header_footer.py  hyphen.py  loader.py  normalizer.py  pipeline.py  section_detector.py  section_resolver.py  section_tree.py  tokenizer.py  types.py  y_band_detector.py
src/book_indexer/render/: __init__.py  __main__.py  audit.py  coverage.py  cross_refs.py  docx.py  docx_sections_only.py  editorial_overrides.py  errors.py  filter.py  ir.py  markdown.py  markdown_sections_only.py  metadata.py  parent_dedup.py  plural_consolidation.py  range_collapse.py  section_range_collapse.py  synthesize.py
src/book_indexer/tables/: __init__.py  __main__.py  alphabetize.py  cases.py  errors.py  ir.py  regex_fallback.py  resolver.py  rules.py  statutes.py  verifier_bridge.py
src/book_indexer/verify/: __init__.py  __main__.py  errors.py  evidence.py  ledger.py  matcher.py  query_tokenizer.py  section_path.py  snippet.py  verifier.py
tests/: conftest.py
tests/integration/: test_sample_verify_end_to_end.py
tests/invariants/: conftest.py  test_concept_schema_rejects_locators.py  test_curator_schemas_locator_free.py  test_no_anthropic_sdk_imports.py  test_render_locator_format.py  test_verify_is_sole_locator_source.py
tests/property/: conftest.py  test_ligature_expansion.py  test_normalize_idempotent.py  test_verify_properties.py
tests/unit/: test_hyphen.py  test_normalizer.py  test_section_detector.py  test_tokenizer.py  test_y_band_detector.py
tests/unit/assembly/: conftest.py  test_acronym_overrides_loadable.py  test_canonical.py  test_cite_rule.py  test_coverage.py  test_cross_refs.py  test_dedup.py  test_dedup_variant_loss_fix.py  test_ir.py  test_prose_normalize.py  test_subdivide.py  test_tree.py  test_verifier_sweep.py
(+57 files in other folders)
