[project]
name = "book-indexer"
version = "0.1.0"
description = "Deterministic back-of-book indexer for PDFs, with symbolic page-citation verification — the LLM never assigns a page number."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "book-indexer contributors" }]
keywords = [
  "index",
  "back-of-book-index",
  "pdf",
  "legal",
  "citation",
  "nlp",
  "deterministic",
  "indexing",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Legal Industry",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Indexing",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]

# Minimum versions only — exact pins live in the dev extra + uv.lock.
dependencies = [
  "pymupdf>=1.27",
  "spacy>=3.8,<3.9",
  "orjson>=3.10",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "eyecite>=2.7",
  "inflect>=7.0,<8.0",
  "reporters-db>=3.2",
  "courts-db>=0.10",
  "pandas>=2.2",
  "typer>=0.12",
  "markdown-it-py>=3.0,<5",
  "pydantic>=2.9,<3.0",
  "python-docx>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "hypothesis>=6.152",
  "ruff>=0.6",
  "pyright>=1.1.380",
  "pre-commit>=3.8",
]

[project.urls]
Homepage = "https://github.com/OWNER/book-indexer"
Repository = "https://github.com/OWNER/book-indexer"
Issues = "https://github.com/OWNER/book-indexer/issues"
Changelog = "https://github.com/OWNER/book-indexer/blob/main/CHANGELOG.md"

[project.scripts]
book-index = "book_indexer.cli.__main__:app"

# Citation-tables plugin namespace (PKG-04). The `legal-citations` plugin
# (eyecite + reporters-db + courts-db) ships bundled in v0.1; non-legal-domain
# table plugins are roadmap and register against this same entry-point group.
[project.entry-points."book_indexer.tables"]
legal-citations = "book_indexer.tables.resolver"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/book_indexer"]

[tool.hatch.build.targets.sdist]
include = [
  "src/book_indexer",
  "fixtures",
  "config",
  "samples",
  "book.toml",
  "LICENSE",
  "NOTICE",
  "README.md",
  "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "slow: tests that take > 5s (full-ingest, determinism)",
  "integration: tests that ingest a sample PDF end-to-end",
  "property: Hypothesis property-based tests (tests/property/)",
  "invariants: CI ship-blocker invariants (tests/invariants/)",
  "hypothesis: explicit @given-decorated tests (subset of property)",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pymupdf.*",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
